@@ -4,10 +4,12 @@ import com.databricks.jdbc.api.IDatabricksConnection;
 import com.databricks.jdbc.api.IDatabricksUCVolumeClient;
 import com.databricks.jdbc.api.impl.arrow.ArrowResultChunk;
 import com.databricks.jdbc.common.DatabricksJdbcConstants;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.sql.*;
 import java.time.LocalDate;
@@ -45,7 +47,6 @@ public class DriverTest {
   @Test
   void testGetTablesOSS_StatementExecution() throws Exception {
     DriverManager.registerDriver(new Driver());
-    DriverManager.drivers().forEach(driver -> System.out.println(driver.getClass()));
     // Getting the connection
     String jdbcUrl =
         "jdbc:databricks://e2-dogfood.staging.cloud.databricks.com:443/default;transportMode=https;ssl=1;AuthMech=3;httpPath=/sql/1.0/warehouses/791ba2a31c7fd70a;";
@@ -82,7 +83,6 @@ public class DriverTest {
   @Test
   void testGetTablesOSS_Metadata() throws Exception {
     DriverManager.registerDriver(new Driver());
-    DriverManager.drivers().forEach(driver -> System.out.println(driver.getClass()));
     // Getting the connection
     String jdbcUrl =
         "jdbc:databricks://e2-dogfood.staging.cloud.databricks.com:443/default;transportMode=https;ssl=1;AuthMech=3;httpPath=/sql/1.0/warehouses/791ba2a31c7fd70a;";
@@ -97,7 +97,6 @@ public class DriverTest {
   @Test
   void testArclight() throws Exception {
     DriverManager.registerDriver(new Driver());
-    DriverManager.drivers().forEach(driver -> System.out.println(driver.getClass()));
     // Getting the connection
     String jdbcUrl =
         "jdbc:databricks://arclight-staging-e2-arclight-dmk-qa-staging-us-east-1.staging.cloud.databricks.com:443/default;transportMode=https;ssl=1;AuthMech=3;httpPath=/sql/1.0/warehouses/8561171c1d9afb1f;";
@@ -168,7 +167,6 @@ public class DriverTest {
   @Test
   void testLogging() throws Exception {
     DriverManager.registerDriver(new Driver());
-    DriverManager.drivers().forEach(driver -> System.out.println(driver.getClass()));
     String jdbcUrl =
         "jdbc:databricks://e2-dogfood.staging.cloud.databricks.com:443/default;transportMode=https;ssl=1;httpPath=sql/protocolv1/o/6051921418418893/1115-130834-ms4m0yv;AuthMech=3;UID=token;LogLevel=debug;LogPath=./logDir;LogFileCount=3;LogFileSize=2;";
     Connection con = DriverManager.getConnection(jdbcUrl, "token", "x");
@@ -208,7 +206,6 @@ public class DriverTest {
   @Test
   void testHttpFlags() throws Exception {
     DriverManager.registerDriver(new Driver());
-    DriverManager.drivers().forEach(driver -> System.out.println(driver.getClass()));
 
     String jdbcUrl =
         "jdbc:databricks://e2-dogfood.staging.cloud.databricks.com:443/default;transportMode=https;ssl=1;AuthMech=3;httpPath=/sql/1.0/warehouses/791ba2a31c7fd70a;TemporarilyUnavailableRetry=3;";
@@ -220,7 +217,6 @@ public class DriverTest {
   @Test
   void testUCVolumeUsingInputStream() throws Exception {
     DriverManager.registerDriver(new Driver());
-    DriverManager.drivers().forEach(driver -> System.out.println(driver.getClass()));
     System.out.println("Starting test");
     // Getting the connection
     String jdbcUrl =
@@ -232,7 +228,7 @@ public class DriverTest {
 
     File file = new File("/tmp/put.txt");
     try {
-      Files.writeString(file.toPath(), "test-put");
+      Files.write(file.toPath(), "test-put".getBytes(StandardCharsets.UTF_8));
 
       System.out.println("File created");
 
@@ -249,7 +245,14 @@ public class DriverTest {
 
       InputStreamEntity inputStream =
           client.getObject("samikshya_hackathon", "default", "gopal-psl", "test-stream.csv");
-      System.out.println("Got data " + new String(inputStream.getContent().readAllBytes()));
+      ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+      byte[] data = new byte[1024];
+      int nRead;
+      while ((nRead = inputStream.getContent().read(data, 0, data.length)) != -1) {
+        buffer.write(data, 0, nRead);
+      }
+      buffer.flush();
+      System.out.println("Got data " + new String(buffer.toByteArray(), StandardCharsets.UTF_8));
       inputStream.getContent().close();
 
       System.out.println(
